--- a/hy_HD_admin_spring/WebContent/index.html
+++ b/hy_HD_admin_spring/WebContent/index.html
@@ -96,8 +96,9 @@
 		function oninitframework()
 		{
 			var screeninfo = [
-            {"id":"Desktop_screen","type":"desktop","themeid":"theme::default","xadl":"Application_Desktop.xadl.js"},
-            {"id":"screen00","type":"desktop","themeid":"theme::default","xadl":"Application_Desktop_1.xadl.js"}
+				{"id":"screen00","type":"desktop","themeid":"theme::default","xadl":"Application_Desktop_1.xadl.js"},
+            {"id":"Desktop_screen","type":"desktop","themeid":"theme::default","xadl":"Application_Desktop.xadl.js"}
+            
 			];
 
 			nexacro._initHTMLSysEvent(window, document);			
